--- a/style.css
+++ b/style.css
@@ -1,21 +1,164 @@
-#Top {
-    margin-left:200px;
-    margin-right:200px;
-    text-align: center;
-    
+html {
+  font-family: "Times New Roman", Times, serif;
+  background-color: black;
+  scroll-behavior: smooth;
+  offset-anchor: 5cm;
+}
+
+body {
+  margin-right: -2px;
+  margin-left: -2px;
+  margin-top: -2px;
+  margin-bottom: -2px;
+  color: white;
+  padding: 0 20px 20px 20px;
+  background-image: url("https://wallpapercave.com/wp/wp3356749.jpg");
+}
+
+img {
+  width: 300px;
+  height: 300px;
+}
+
+p {
+  font-size: 20px;
+}
+
+h1 {
+  text-transform: capitalize;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin: 0;
+  text-decoration: underline;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
+h3 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 25px;
+
+  text-align: center;
+  text-decoration: underline;
+}
+
+.persodescription {
+  display: flex;
+}
+
+.perso {
+  height: 550px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: white;
+  padding-top: 30px;
+}
+
+.resize {
+  width: 300px;
+  height: 300px;
+}
+
+.fizz {
+  color: rgb(76, 130, 231);
+}
+.akali {
+  display: flex;
+  flex-direction: row;
+}
+.colorakali {
+  color: rgb(2, 170, 2);
+}
+.coloryas {
+  color: rgb(158, 158, 158);
+}
+.colorkat {
+  color: rgb(247, 84, 171);
+}
+
+.coloryone {
+  color: blueviolet;
+}
+
+.nav {
+  background: #0000009a;
+  height: 40px;
+  margin-bottom: 20px;
+  padding-left: 400px;
+  position: sticky;
+  top: 0;
+}
+
+.nav ul li {
+  float: left;
+  list-style: none;
+  
+}
+.nav ul li a {
+  line-height: 40px;
+  display: block;
+  padding: 0 10px;
+  color: white;
+}
+
+.footi {
+  display: flex;
+  justify-content:space-evenly;
+  
+  
+ 
+}
+
+.navigateur {
+  display: flex;
+  background-color: black;
+  height: 100px;
+  justify-content: space-evenly;
+  color:white
+ 
+  
+}
+.navigateur a {
+  text-decoration: none;
+}
+
+.navigateur a:visited
+{
+  color:white;
+}
+
+.navigateur a:hover
+{
+  color:blue;
+}
+
+
+.onglet:hover{
+  color:blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.foot:hover {
+  color:blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  height: 200px;
+  width: auto;
 
 }
 
-.champ {
-   
-}
-
-.sort {
-    display: flex;
-    
-}
-
-.cote {
-    display: flex;
-    justify-content: space-between;
+.riot {
+  
+  padding-top: 20px;
+  padding-left: 550px;
+  font-size: 11px;
 }
